--- a/src/com/sayit/resources/layout/window/layout_find_contact.fxml
+++ b/src/com/sayit/resources/layout/window/layout_find_contact.fxml
@@ -23,7 +23,7 @@
             </styleClass>
         </HBox>
         <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity"
-              minWidth="-Infinity">
+              minWidth="-Infinity" VBox.vgrow="ALWAYS">
             <children>
                 <ListView id="list-view" fx:id="contactListView" VBox.vgrow="ALWAYS"/>
             </children>
